fix x-editable popup overflow (#85)
* fix x-editable popup overflow

* fix code

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -719,3 +719,31 @@ table.scrollable-header {
 .checkbox-group label {
   padding-top: 9px;
 }
+
+.popover-wrapper.bottom-popup form {
+  margin-top: 90px !important;
+}
+
+.popover-wrapper.bottom-popup form:before {
+  content: "";
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #AAA;
+  border-top: 0px !important;
+  position: absolute;
+  top: -10px !important;
+}
+
+.popover-wrapper.bottom-popup form:after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-left: 9px solid transparent;
+  border-right: 9px solid transparent;
+  border-bottom: 9px solid #FFF;
+  position: absolute;
+  top: -9px !important;
+  border-top: 0px !important;
+}
